right-aligned commit button and made small fix to file click

--- a/src/client/src/Styles/Editor.css
+++ b/src/client/src/Styles/Editor.css
@@ -40,7 +40,7 @@
 } */
 
 #editor{
-    height: 100vh;
+    height: 100%;
 }
 
 /* BASICS */
